--- a/src/gui/gtk3/interface.glade
+++ b/src/gui/gtk3/interface.glade
@@ -54,8 +54,8 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_top">30</property>
-                <property name="margin_bottom">30</property>
+                <property name="margin_top">20</property>
+                <property name="margin_bottom">20</property>
                 <property name="label" translatable="yes">CO/NO2 Kombisensoren mit Modbus Interface</property>
               </object>
               <packing>
@@ -80,6 +80,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_top">10</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
@@ -109,7 +110,6 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                   <object class="GtkScale">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="margin_right">200</property>
                     <property name="adjustment">adjustment1</property>
                     <property name="round_digits">1</property>
                     <property name="digits">0</property>
@@ -120,10 +120,25 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                     <property name="position">2</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkButton">
+                    <property name="label" translatable="yes">speichern</property>
+                    <property name="width_request">100</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="margin_right">200</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">3</property>
+                  </packing>
+                </child>
               </object>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
+                <property name="expand">True</property>
+                <property name="fill">False</property>
                 <property name="position">2</property>
               </packing>
             </child>
@@ -159,6 +174,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                 <child>
                   <object class="GtkButton" id="button_calib_no2">
                     <property name="label" translatable="yes">kalibrieren</property>
+                    <property name="width_request">100</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -209,6 +225,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                 <child>
                   <object class="GtkButton" id="button_calib_co">
                     <property name="label" translatable="yes">kalibrieren</property>
+                    <property name="width_request">100</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
