--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -76,6 +76,8 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
     <property name="width_request">1024</property>
     <property name="height_request">600</property>
     <property name="can_focus">False</property>
+    <property name="margin_left">100</property>
+    <property name="margin_right">100</property>
     <property name="border_width">10</property>
     <property name="default_width">1024</property>
     <property name="default_height">600</property>
