--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -103,10 +103,11 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
               </packing>
             </child>
             <child>
-              <object class="GtkImage">
+              <object class="GtkButton" id="button_discover">
+                <property name="label" translatable="yes">Sensor erkennen</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="resource">/com/gaswarnanlagen/xmz-mod-touch/GUI/CO_NO2 Kombisensoren mit Modbus Interface-600x338.png</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
