--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -119,7 +119,6 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_top">10</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
@@ -127,7 +126,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                     <property name="label" translatable="yes">Modbus Adresse</property>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
@@ -141,9 +140,21 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                     <property name="value">1</property>
                   </object>
                   <packing>
-                    <property name="expand">True</property>
-                    <property name="fill">False</property>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSpinner" id="spinner_discovery">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="padding">20</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
                 <child>
@@ -157,7 +168,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                   <packing>
                     <property name="expand">True</property>
                     <property name="fill">True</property>
-                    <property name="position">2</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
@@ -171,7 +182,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">3</property>
+                    <property name="position">4</property>
                   </packing>
                 </child>
               </object>
@@ -186,10 +197,11 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <child>
-                  <object class="GtkSwitch" id="button_enable_no2">
+                  <object class="GtkToggleButton" id="button_enable_no2">
+                    <property name="label" translatable="yes">aktiv</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="active">True</property>
+                    <property name="receives_default">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -235,10 +247,11 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <child>
-                  <object class="GtkSwitch" id="button_enable_co">
+                  <object class="GtkToggleButton" id="button_enable_co">
+                    <property name="label" translatable="yes">aktiv</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="active">True</property>
+                    <property name="receives_default">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
