--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -201,9 +201,10 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkSpinButton">
+                      <object class="GtkSpinButton" id="spin_button_modbus_address">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="margin_right">30</property>
                         <property name="text" translatable="yes">1</property>
                         <property name="adjustment">adjustment_modbus_address</property>
                         <property name="value">1</property>
@@ -212,18 +213,6 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkSpinner" id="spinner_discovery">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
-                        <property name="padding">20</property>
-                        <property name="position">2</property>
                       </packing>
                     </child>
                     <child>
